# gittriage

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TODO.md  TODO_updated.md  deny.toml  gittriage.toml.example  justfile  nexus.py  nexus.toml.example  requirements.txt  server.py
.github/workflows/: build.yml  nexus.yml  npm-github-packages.yml  regression-dashboard.yml  release.yml  rust-ci.yml  security.yml
crates/gittriage/: Cargo.toml
crates/gittriage-adapters/: Cargo.toml
crates/gittriage-adapters/src/: lib.rs  tests.rs
crates/gittriage-adapters/tests/: adapter_absence.rs  external_evidence_non_blocking.rs
crates/gittriage-adapters/tests/fixtures/: gitleaks_output.json  semgrep_output.json
crates/gittriage-agent/: Cargo.toml
crates/gittriage-agent/src/: error.rs  lib.rs  path_check.rs  preflight.rs  provenance.rs  resolve.rs  summary.rs  verdict.rs
crates/gittriage-agent/tests/: plan_verdict_crosscheck.rs
crates/gittriage-api/: Cargo.toml
crates/gittriage-api/src/: lib.rs
crates/gittriage-api/tests/: http_contract.rs
crates/gittriage-config/src/: lib.rs
crates/gittriage-core/src/: model.rs
crates/gittriage-db/src/: lib.rs
crates/gittriage-db/tests/: clone_remote_links_smoke.rs  load_inventory_run.rs  persist_plan.rs  replace_inventory.rs  scan_rescan_fk.rs
crates/gittriage-git/: Cargo.toml
crates/gittriage-git/src/: lib.rs
crates/gittriage-plan/: Cargo.toml
crates/gittriage-plan/src/: lib.rs  scoring.rs
crates/gittriage-plan/tests/: canonical_truth_benchmark.rs  cluster_resolution_fixtures.rs  merge_base_evidence.rs  planner_rules.rs
crates/gittriage-report/src/: lib.rs
crates/gittriage-report/tests/: scope_filter.rs  snapshot_markdown.rs
crates/gittriage-scan/src/: lib.rs
crates/gittriage-tui/: Cargo.toml
crates/gittriage-tui/src/: lib.rs
crates/gittriage/src/: explain.rs  main.rs
crates/gittriage/tests/: agent_cli_contract.rs
crates/nexus-adapters/: Cargo.toml
crates/nexus-adapters/src/: lib.rs
crates/nexus-adapters/tests/: adapter_absence.rs  external_evidence_non_blocking.rs
crates/nexus-ai/: Cargo.toml
crates/nexus-ai/src/: lib.rs
crates/nexus-api/: Cargo.toml
crates/nexus-api/src/: lib.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: explain.rs  main.rs
crates/nexus-cli/tests/: e2e_smoke.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: lib.rs
crates/nexus-config/tests/: config_precedence.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: lib.rs  model.rs  remote_url.rs
crates/nexus-db/: Cargo.toml
crates/nexus-db/src/: lib.rs
crates/nexus-db/tests/: clone_remote_links_smoke.rs  load_inventory_run.rs  migration_smoke.rs  persist_plan.rs  replace_inventory.rs  sqlite_hardening.rs
crates/nexus-git/: Cargo.toml
crates/nexus-git/src/: lib.rs
crates/nexus-github/: Cargo.toml
crates/nexus-github/src/: lib.rs
crates/nexus-plan/: Cargo.toml
crates/nexus-plan/src/: lib.rs  scoring.rs
crates/nexus-plan/tests/: cluster_resolution_fixtures.rs  merge_base_evidence.rs  planner_rules.rs
crates/nexus-report/: Cargo.toml
crates/nexus-report/src/: lib.rs
crates/nexus-report/tests/: snapshot_markdown.rs
crates/nexus-scan/: Cargo.toml
crates/nexus-scan/src/: lib.rs
crates/nexus-tui/: Cargo.toml
crates/nexus-tui/src/: lib.rs
docs/: ARCHITECTURE.md  CLI.md  CONFIG.md  DECISIONS.md  DISTRIBUTION.md  EXAMPLES.md  EXTERNAL_TOOLS.md  FAQ.md  LEGACY_V1.md  PLAN_SCHEMA.md  PRODUCT_STRATEGY.md  SCORING.md  SCORING_PROFILES.md
fixtures/golden/: plan-v1.json
migrations/: 0001_init.sql
packaging/: RELEASING.md  verify-release-assets.sh
packaging/aur/: PKGBUILD
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: gittriage.rb
packaging/npm/: README.md  package.json
packaging/scoop/: gittriage.json
packaging/scripts/: bump_release_packaging.py
reports/: drift.md
scripts/: ci_regression_dashboard.py  tag-legacy-python.sh
web/static/: styles.css
web/templates/: index.html
(+8 files in other folders)
