[package]
name = "gittriage-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic agent preflight: resolve, verdicts, path checks, compact summaries"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gittriage-core = { path = "../gittriage-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
