[package]
name = "gittriage-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
gittriage-agent = { path = "../gittriage-agent" }
gittriage-config = { path = "../gittriage-config" }
gittriage-core = { path = "../gittriage-core" }
gittriage-db = { path = "../gittriage-db" }
gittriage-plan = { path = "../gittriage-plan" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
