[package]
name = "nexus-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
nexus-core = { path = "../nexus-core" }
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
which.workspace = true
