[package]
name = "nexus-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional AI-assisted explanations for Nexus (OpenAI-compatible endpoints)"

[dependencies]
anyhow.workspace = true
nexus-core = { path = "../nexus-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
