[package]
name = "nexus-scan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
glob = "0.3"
ignore.workspace = true
regex.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

nexus-core = { path = "../nexus-core" }

[dev-dependencies]
tempfile = "3"
