[package]
name = "nexus-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal terminal UI for Nexus cluster inspection (not a dashboard)"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
nexus-core = { path = "../nexus-core" }
ratatui.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
nexus-core = { path = "../nexus-core" }
